# mcp-example

./: .env.example  README.md  pyproject.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json
credentials/: README.md
mcp_demo/: server.py
mcp_gmail/: __init__.py  __main__.py  server.py
mcp_server_imap_gmail/: __init__.py  server.py
